--- a/menu-deroulant-responsive.css
+++ b/menu-deroulant-responsive.css
@@ -125,7 +125,7 @@ z-index: 100000;
 
 
 .menu-contact:hover{
-	border-top: 5px solid #BBB;
+	border-top: 5px solid Red;
 	background-color: RGBa(220, 220, 220, 0.15);
 
 }
