--- a/menu-deroulant-responsive.css
+++ b/menu-deroulant-responsive.css
@@ -130,8 +130,8 @@ z-index: 100000;
 
 }
 .menu-mission:hover{
-	border-top: 5px solid Red;
-	background-color: RGBa(255, 0, 0);
+	border-top: 5px solid black;
+	background-color: RGBa(241, 68, 79, 0,27);
 
 }
 
