--- a/menu-deroulant-responsive.css
+++ b/menu-deroulant-responsive.css
@@ -2,7 +2,9 @@ body{
    font-family: verdana, Calibri, sans-serif;
    margin: 0px;
    padding: 0px;
-backgroud-image: url(psg.gif)
+background-image: url(psg.gif);
+	background-repeat: no-repeat;
+	background-size: cover;
 
 }
 
