--- a/menu-deroulant-responsive.css
+++ b/menu-deroulant-responsive.css
@@ -2,10 +2,17 @@ body{
    font-family: verdana, Calibri, sans-serif;
    margin: 0px;
    padding: 0px;
-background-image: url(psg.gif);
-	background-repeat: no-repeat;
-	background-size: cover;
+        background-image: url(psg.gif);
+	backgroud-repeat: none-repeat
+	width: 100% 
+        height: 900px
+}
 
+iframe {
+    border-width: 2px;
+    border-style: inset;
+    border-color: initial;
+    border-image: initial;
 }
 
 nav > ul{
