--- a/menu-deroulant-responsive.css
+++ b/menu-deroulant-responsive.css
@@ -2,6 +2,8 @@ body{
    font-family: verdana, Calibri, sans-serif;
    margin: 0px;
    padding: 0px;
+ background-image: url(psg.gif)
+ background-repeat: none-repeat
        
 
 nav > ul{
