--- a/menu-deroulant-responsive.css
+++ b/menu-deroulant-responsive.css
@@ -10,9 +10,22 @@ body{
 main div h1{
 	text-align: center;
 	margin: o auto;
-	z-index: 50;
-	margin-left: 80%;
-        MARGIN-TOP: 80%;
+	margin: 0 auto;
+        z-index: 10;
+	 color: purple;
+    text-shadow:
+    0 0 7px #fff,
+    0 0 10px #fff,
+    0 0 21px #fff,
+    0 0 42px #0fa,
+    0 0 82px #0fa,
+    0 0 92px #0fa,
+    0 0 102px rgb(255, 0, 238),
+    0 0 151px rgb(255, 0, 144);
+    opacity: 100;
+    animation: flicker 1.5s infinite alternate;
+    color: #fff;
+	
 }
 	
 	 
