--- a/menu-deroulant-responsive.css
+++ b/menu-deroulant-responsive.css
@@ -159,6 +159,10 @@ z-index: 100000;
 	background-color: RGBa(000, 112, 192, 0.15);
 
 }
+.menu-sql:hover{
+    border-top: 5px solid #06c1f4;
+    background-color: rgba(241, 211, 79, 0.15);
+}
 
 
 
@@ -178,6 +182,9 @@ nav > ul >li:hover a{
 .menu-js .submenu{
 	background-color: RGB(251, 216, 99);
 }
+.menu-sql .submenu{
+    background-color: #06c1f4;
+}
 
 .submenu li:hover{
 	color:#EEE;
@@ -191,6 +198,9 @@ nav > ul >li:hover a{
 }
 .menu-js .submenu li:hover{
 	background-color: RGB(200, 165, 75);
+}
+.menu-sql .submenu li:hover{
+    background-color: #0e82a3;
 }
 
 .menu-mobile{
