--- a/menu-deroulant-responsive.css
+++ b/menu-deroulant-responsive.css
@@ -13,19 +13,9 @@ main div h1{
 	margin-top: 30%;
 	margin: 0 auto;
         z-index: 10;
-	 color: purple;
-    text-shadow:
-    0 0 7px #fff,
-    0 0 10px #fff,
-    0 0 21px #fff,
-    0 0 42px #0fa,
-    0 0 82px #0fa,
-    0 0 92px #0fa,
-    0 0 102px rgb(255, 0, 238),
-    0 0 151px rgb(255, 0, 143);
-    opacity: 100;
-    animation: flicker 1.5s infinite alternate;
-    color: #fff;
+	top: 50%;
+    transform: translate(-50%, -50%);
+	
 	
 }
 	
