--- a/menu-deroulant-responsive.css
+++ b/menu-deroulant-responsive.css
@@ -151,7 +151,7 @@ z-index: 100000;
 
 }
 .menu-sql:hover{
-    border-top: 5px solid #06c1f4;
+    border-top: 5px solid #ff0505;
     background-color:  rgba(251, 6, 6, 0.727);
 }
 
@@ -191,7 +191,7 @@ nav > ul >li:hover a{
 	background-color: RGB(200, 165, 75);
 }
 .menu-sql .submenu li:hover{
-    background-color: rgba(251, 6, 6, 0.727);
+    background-color: #ff0505;
 }
 
 .menu-mobile{
