--- a/menu-deroulant-responsive.css
+++ b/menu-deroulant-responsive.css
@@ -44,7 +44,7 @@ main div h1{
 	transform:translate(-50%, -50%);
 	}
 	h1 {
-	font-family:monospace;
+	font-family:cursive;
 	margin: 20%;
 	margin-top: 70%;
 	margin: 19%;
