--- a/menu-deroulant-responsive.css
+++ b/menu-deroulant-responsive.css
@@ -150,7 +150,7 @@ nav input[type=checkbox]{
 nav{
 
 	width: 100%;
-	background-color: black;
+	background-color:  rgb(80, 76, 76);;
 }
 
 nav > ul > li{
