--- a/TP style buton CSS.css
+++ b/TP style buton CSS.css
@@ -1,15 +1,15 @@
 body
 {
 
-   background-color: black;
+   background-color: orange;
    text-align: center;
 
 }
 h1
 {
 
-color: hotpink;
-font-family: verdana;
+color: red;
+font-family: yellow;
 font-size: 2em;
 
 }
@@ -18,7 +18,7 @@ div
 {
 
 
-border: 2px solid green;
+border: 2px solid yellow;
 border-radius: 26px;
 width:50%;
 margin-left: 25%;
@@ -31,8 +31,8 @@ button
 {
 
  width: 300px;
- border: 2px solid black;
+ border: 2px solid yellow;
  border-radius: 26px;
- background-color: darkgreen;
+ background-color: yellow;
 
 }
